Compile with Java 8